UI Fixes for player on safari

--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,18 @@ body {
   display: none;
 }
 
+.video-js {
+  font-size: 0.7em;
+}
+
+video::cue {
+  font-size: 0.8em;
+  background-color: transparent!important;
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.678);
+  font-weight: 500;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .video-js .vjs-control-bar {
   background: #0c0c0c;
 }
@@ -79,4 +91,12 @@ body {
   background-color: transparent!important;
   text-shadow: 0 2px 6px rgba(0, 0, 0, 0.678);
   font-weight: 600;
+}
+
+.safari-subtitles {
+  font-size: 0.8em;
+  background-color: transparent!important;
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.678);
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
